Fix link wrapping

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -129,6 +129,7 @@ body {
 
 .social-link-area {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   flex-direction: row;
   align-items: center;
